styles.css
/*https://webdesign.tutsplus.com/color-schemes-with-css-variables-and-javascript--cms-36989t*/
:root, :root.modernLight {
    --ui-background: white;
    --ui-background-transparent: #ffffff80;
    --ui-text: black;
    --ui-link: #00f;
    --ui-input-background: #fff;
    --ui-button-background: #efefef;
    --ui-input: #e9e9ed;
    --ui-input-hover: #d2d2d5;
    --ui-input-disabled: #e1dede;
    --ui-hilight: #61a6ff;
    --ui-hilight-transparent: #61a6ff85;
    --ui-special: #6eb84c;
    --ui-special-transparent: #8bff6185;
    --ui-info-transparent: #0009;
}

:root.modernDark {
    --ui-background: #141414;
    --ui-background-transparent: #17171780;
    --ui-text: #e0e0e0;
    --ui-link: #61a6ff;
    --ui-input: #8f8f8f;
    --ui-input-background: #525252;
    --ui-button-background: #525252;
    --ui-input-hover:  #454444;
    --ui-input-disabled: #373737;
    --ui-hilight: #61a6ff;
    --ui-hilight-transparent: #61a6ff85;
    --ui-special: #6eb84c;
    --ui-special-transparent: #8bff6185;
    --ui-info-transparent: #a3a3a399;
    --icon-filter: invert(0.85);
}

body {
    position: absolute;
    overflow: hidden;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    color: var(--ui-text);
}

* {
    box-sizing: border-box;
}

html {
    font-size: 14px;
    font-family: bold;
    -webkit-tap-highlight-color: transparent;
    -webkit-touch-callout: none;
}

body {
    transition: background-color 0.3s;
    background-color: #333;
    margin: 0;
    font-family: Arial, sans-serif;
    font-size: 150%;
}

select,
textarea,
input:not([type]),
input[type="email"],
input[type="number"],
input[type="text"] {
    padding: 12px;
    border-radius: 4px;
    outline: 0;
    background: var(--ui-input-background);
    border: 1px solid var(--ui-input);
    transition: border 0.1s;
    color: var(--ui-text);
}

textarea:focus,
input:not([type]):focus,
input[type="email"]:focus,
input[type="number"]:focus,
input[type="text"]:focus {
    border: 1px solid var(--ui-hilight);
}

input[type="email"]:invalid {
    border: 1px solid red;
}

input[type="button"] {
    border: none;
    padding: 12px;
    border-radius: 4px;
    transition: background-color 0.1s;
    color: var(--ui-text);
    background-color: var(--ui-button-background);
}

input[type="button"]:hover {
    background-color: var(--ui-input-hover);
}

input[type="button"]:disabled {
    background-color: var(--ui-input-disabled);
}

a {
    color: var(--ui-link);
}

.novisit:visited {
    color: var(--ui-link);;
}

.icon-symbolic {
    filter: var(--icon-filter);
}

header {
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    backdrop-filter: blur(16px);
    height: 200px;
    z-index: 1;
}

.hud {
    z-index: 2;
    position: absolute;
    background-color: var(--ui-background);
    display: flex;
    box-shadow: 0 0 4px #000;
    width: 140px;
    height: 60px;
    user-select: none;
    overflow: hidden;
}

.hud>p {
    align-self: center;
    text-align: center;
    font-size: 18px;
    flex-grow: 1;
}

.game-actions {
    right: 0;
    top: 0;
    border-radius: 0 0 0 8px;
    width: min(60%, 300px);
}

.game-actions>p {
    flex-grow: 1;
    text-align: center;
    align-self: center;
    margin: 0;
    padding-top: 19px;
    padding-bottom: 19px;
    transition:
        background-color 0.1s,
        border 0.1s;
}

.game-actions>p:hover {
    background-color: var(--ui-input-hover);
}

.menu {
    z-index: 2;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-color: var(--ui-background);
    box-shadow: 0 0 16px #000;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    padding: 8px;
    user-select: none;
}

.menu>* {
    align-self: center;
}

.game-screen {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    overflow: hidden;
}

.main-menu {
    background-color: var(--ui-background);
    display: flex;
    flex-direction: column;
    position: absolute;
    z-index: 2;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    overflow-y: auto;
    transition: .2s background-color;
}

.main-menu-page {
    display: none;
    flex-direction: column;
    row-gap: 8px;
}

.main-menu .branding {
    display: flex;
    align-items: center;
    column-gap: 8px;
    position: absolute;
}

.main-menu .header-nav {
    text-align: center;
    white-space: nowrap;
}

.main-menu nav {
    position: absolute;
}

.main-menu>div {
    display: flex;
    flex-direction: column;
}

.main-menu>div>* {
    align-self: center;
}

.main-menu-field {
    width: 40%;
}

.page-link {
    transition:
        0.2s padding,
        0.2s background-color;
}

.page-link-current {
    display: initial;
    transform: translateX(-50%);
    background: var(--ui-hilight-transparent);
    padding-left: 4px;
    padding-right: 4px;
    border-radius: 2px;
    text-decoration: none;
}

.main-menu-page-content {
    display: flex;
    flex-direction: column;
    row-gap: 8px;
    align-items: center;
    width: 100%;
}

.form-frame {
    display: flex;
    flex-direction: column;
    row-gap: 8px;
    width: min(400px, calc(100% - 16px));
    border: 1px solid #d3d3d3;
    padding: 16px;
    border-radius: 4px;
}

.form-frame[data-disabled]>* {
    pointer-events: none;
    opacity: 0.8;
}

.side-panel {
    position: absolute;
    left: 0;
    height: 100%;
    width: min(360px, 100%);
    background: var(--ui-background);
    z-index: 2;
    padding: 16px;
    box-sizing: border-box;
    box-shadow: 0 0 12px #000;
    display: flex;
    flex-direction: column;
    transition: 0.2s transform;
}

.side-panel[data-closed] {
    transform: translateX(-100%);
    box-shadow: none;
}

.spawn-menu {
    background-color: var(--ui-background-transparent);
    width: min(calc(100% - 28px), 500px);
    top: 25%;
}
/* ... */

